# TerminalVibe

./: .gitignore  ARCHITECTURE.md  README.md  TODO.md  app.js  app2.js  index.html  mirror-proxy.js  package-lock.json  package.json  pdf-viewer.html  server.js  server.js.bak  style.css  terminal.html  terminal_server.py
cache/: _index.json
docs/okf/: index.md  log.md
docs/okf/api/: browser-proxy.md  frontend-state.md  index.md  tauri-ipc.md  websocket-pty.md
docs/okf/architecture/: frontend.md  index.md  node-backend.md  rust-shell.md
docs/okf/playbooks/: build-release.md  debug-pty.md  dev-setup.md  index.md
squashfs-root/: .DirIcon  TerminalVibe.desktop
squashfs-root/usr/lib/: libXdmcp.so.6  libXi.so.6  libatk-1.0.so.0  libatk-bridge-2.0.so.0  libatomic.so.1  libatspi.so.0  libblkid.so.1  libcups.so.2  libdw.so.1  libelf.so.1  libgcrypt.so.20  libgdk_pixbuf-2.0.so.0  libglib-2.0.so.0  libglycin-2.so.0  libgmodule-2.0.so.0  libgnutls.so.30  libgobject-2.0.so.0.8800.1  libgstallocators-1.0.so.0  libgstapp-1.0.so.0  libgstaudio-1.0.so.0  libgstbase-1.0.so.0  libgstfft-1.0.so.0  libgstgl-1.0.so.0  libgstpbutils-1.0.so.0  libgstreamer-1.0.so.0  libgsttag-1.0.so.0  libgstvideo-1.0.so.0  libharfbuzz-icu.so.0  libhogweed.so.7  libhwy.so.1  libhyphen.so.0  libkeyutils.so.1  liblcms2.so.2  libleancrypto.so.1  libltdl.so.7  libmount.so.1  libnettle.so.9  libnghttp2.so.14  libpng16.so.16  libsqlite3.so.0  (+8 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  pty.rs
(+7 files in other folders)
