[package]
name = "terminalvibe"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "unstable"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
portable-pty = "0.8"
parking_lot = "0.12"
libc = "0.2"
